changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -323,7 +323,7 @@
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div *ngIf="isAddOilPurchase" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/inventory/oilCompanyPurchase">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -333,7 +333,7 @@
           </span>
         </div>
         <div *ngIf="isViewOilPurchase" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/inventory/viewOilCompanyPurchase">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -343,7 +343,7 @@
           </span>
         </div>
         <div *ngIf="isAddVarPercentage" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/inventory/variationPercentage">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
