--- a/src/app/pages/dealer/report/vat-book/vat-book.component.html
+++ b/src/app/pages/dealer/report/vat-book/vat-book.component.html
@@ -1,1 +1,4 @@
-<p>vat-book works!</p>
+<div class="card-header">
+    <b>VAT Book</b>
+</div>
+<app-feeds-widget12 class="card card-xxl-stretch mb-5 mb-xl-8"></app-feeds-widget12>
