--- a/src/app/pages/dealer/shift/operator-wise/operator-wise.component.html
+++ b/src/app/pages/dealer/shift/operator-wise/operator-wise.component.html
@@ -5,7 +5,7 @@
 <!-- begin::Header -->
 <div class="card-header border-0 pt-5">
     <div>
-        <!-- <app-lists-widget15 class="card card-xxl-stretch mb-5 mb-xl-8"></app-lists-widget15> -->
+        <app-lists-widget15 class="card card-xxl-stretch mb-5 mb-xl-8"></app-lists-widget15>
     </div>
 </div>
 <!-- end:: Header -->
