--- a/src/app/pages/dealer/report/monthly-report/monthly-report.component.html
+++ b/src/app/pages/dealer/report/monthly-report/monthly-report.component.html
@@ -1,1 +1,4 @@
-<p>monthly-report works!</p>
+<div class="card-header">
+    <b>Monthly Report</b>
+</div>
+<app-feeds-widget11></app-feeds-widget11> 
